<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cryptobuddy.ryanbridges.cryptobuddy.CurrencyList.CurrencyListActivity">

    <item
        android:id="@+id/currency_refresh_button"
        android:title="@string/Refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_currency_button"
        android:title="@string/AddCurrency"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/news_button"
        android:title="@string/News"
        android:icon="@drawable/ic_library_books_white_24dp"
        app:showAsAction="always" />
</menu>
