<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/graph_fragment_horizontal_margin"
            android:paddingRight="@dimen/graph_fragment_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.cryptobuddy.ryanbridges.cryptobuddy.chartandprice.CurrencyDetailsTabsActivity">

            <TextView
                android:id="@+id/current_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/graphFragmentDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_price" />


            <TextView
                android:id="@+id/percent_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graphFragmentDateTextView" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:focusableInTouchMode="true"
                android:padding="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline6" />

            <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                android:id="@+id/chart_interval_button_grp"
                android:layout_width="384dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percent_change"
                app:tbgCheckedButton="@+id/dayButton"
                app:tbgChildSpacing="auto">

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/dayButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oneDay"
                    android:textSize="16sp"
                    app:tbgMarkerColor="@color/colorAccent" />

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/weekButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Week"
                    android:textSize="16sp"
                    app:tbgMarkerColor="@color/colorAccent" />

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/monthButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Month"
                    android:textSize="16sp"
                    app:tbgMarkerColor="@color/colorAccent" />

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/threeMonthButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/threeMonth"
                    android:textSize="16sp"
                    app:tbgMarkerColor="@color/colorAccent" />

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/yearButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Year"
                    android:textSize="16sp"
                    app:tbgMarkerColor="@color/colorAccent" />

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/allTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/All"
                    android:textSize="16sp"
                    app:tbgMarkerColor="@color/colorAccent" />

            </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

            <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />


        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>